[package]
name = "cs2trans-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.108"
lingua = "1.6.0"
clap = { version = "4.4.8", features = ["derive"]}
 